fix(dockerfile): run container as non-root user to mitigate privilege escalation

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -5,4 +5,8 @@ COPY package.json .
 RUN bun install --only=prod
 COPY . .
 
+# Create a non-root user and switch
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+USER appuser
+
 CMD ["bun", "dev"]
