fix(dockerfile): run container as non-root user to mitigate privilege escalation

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,11 @@ FROM oven/bun:canary-alpine
 
 WORKDIR /app
 COPY package.json .
-RUN bun install
+RUN bun install --only=prod
 COPY . .
+
+# Create a non-root user and switch
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+USER appuser
 
 CMD ["bun", "dev"]
